fix(header): изменить z-index у бургер-кнопки и меню навигации
- Бургер-кнопка находится поверх меню навигации

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -41,7 +41,8 @@
   }
 
   &Open {
-    transform: translateX(0)
+    transform: translateX(0);
+    z-index: 5;
   }
 }
 
